# phodex

./: .gitignore  LICENSE  README.md  inverse_design_coupler_2x2.py  pyproject.toml
examples/: coupler_2x2.ipynb
examples/femwell/: coupled_modes.ipynb  heated_tin_tops_waveguide_bend.ipynb
examples/gdsfactory/: coupler_2x2.ipynb  coupler_2x2_optimization.ipynb
examples/mpb/: waveguide_design.ipynb
examples/sax/: ring_filter_design.ipynb
examples/topopt/: broadband_coupler.py  broadband_coupler_epigraph.py  broadband_waveguide.ipynb  broadband_waveguide.py  broadband_waveguide_epigraph.py  broadband_waveguide_simple.py  filter_meep.py  waveguide_crossing.py  waveguide_t_bend.py  wavelength_demuxer.py
phodex/: io.py  materials.py  plotting.py  types.py
phodex/autograd/: functions.py  wrappers.py
phodex/layout/: meep.py
phodex/modes/: femwell.py  mpb.py
phodex/optim/: callbacks.py  nlopt.py
phodex/topopt/: filters.py  misc.py  parametrizations.py  problems.py  projections.py
tests/autograd/: test_functions.py
tests/topopt/: test_filters.py
