[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "phodex"
authors = [{ name = "Yannick Augenstein" }]
description = "Examples for different photonic design problems"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]
dependencies = ["numpy", "scipy", "matplotlib", "loguru"]
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Source = "https://github.com/mrbaozi/photonic_design_examples"
